# rnnoise-c

./: .gitmodules  Cargo.toml  LICENSE  README.md
examples/: client.rs  deepspeech.rs
src/: lib.rs
sys/: Cargo.toml  build.rs
